// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertTokensObjectToResolved converts object-like unresolved tokens to resolved object 1`] = `
Object {
  "colors": Object {
    "blue": Object {
      "type": "color",
      "value": "#0000ff",
    },
    "primary": Object {
      "type": "color",
      "value": "#ff0000",
    },
    "red": Object {
      "type": "color",
      "value": "#ff0000",
    },
  },
  "sizing": Object {
    "base": Object {
      "type": "sizing",
      "value": 2,
    },
    "medium": Object {
      "type": "sizing",
      "value": 3,
    },
    "scale": Object {
      "type": "sizing",
      "value": 1.5,
    },
    "small": Object {
      "type": "sizing",
      "value": 2,
    },
  },
}
`;

exports[`convertTokensObjectToResolved does not expand composition when not needed 1`] = `
Object {
  "composition": Object {
    "body": Object {
      "rawValue": Object {
        "sizing": "{size.12}",
        "spacing": "{space.24}",
      },
      "type": "composition",
      "value": Object {
        "sizing": 12,
        "spacing": 24,
      },
    },
    "heading": Object {
      "rawValue": Object {
        "opacity": "{opacity.50}",
      },
      "type": "composition",
      "value": Object {
        "opacity": "50%",
      },
    },
  },
  "opacity": Object {
    "50": Object {
      "rawValue": "50%",
      "type": "opacity",
      "value": "50%",
    },
  },
  "size": Object {
    "12": Object {
      "rawValue": "12",
      "type": "sizing",
      "value": 12,
    },
  },
  "space": Object {
    "24": Object {
      "rawValue": "24",
      "type": "spacing",
      "value": 24,
    },
  },
}
`;

exports[`convertTokensObjectToResolved does not expand shadows when not needed 1`] = `
Object {
  "shadow": Object {
    "1": Object {
      "rawValue": Object {
        "blur": "4",
        "color": "#000000",
        "spread": "5",
        "type": "dropShadow",
        "x": "2",
        "y": "3",
      },
      "type": "boxShadow",
      "value": Object {
        "blur": 4,
        "color": "#000000",
        "spread": 5,
        "type": "dropShadow",
        "x": 2,
        "y": 3,
      },
    },
    "2": Object {
      "rawValue": Array [
        Object {
          "blur": "4",
          "color": "#000000",
          "spread": "5",
          "type": "dropShadow",
          "x": "2",
          "y": "3",
        },
        Object {
          "blur": "5",
          "color": "#000000",
          "spread": "6",
          "type": "dropShadow",
          "x": "3",
          "y": "4",
        },
      ],
      "type": "boxShadow",
      "value": Array [
        Object {
          "blur": 4,
          "color": "#000000",
          "spread": 5,
          "type": "dropShadow",
          "x": 2,
          "y": 3,
        },
        Object {
          "blur": 5,
          "color": "#000000",
          "spread": 6,
          "type": "dropShadow",
          "x": 3,
          "y": 4,
        },
      ],
    },
  },
}
`;

exports[`convertTokensObjectToResolved does not expand typography when not needed 1`] = `
Object {
  "typography": Object {
    "h1": Object {
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 96,
        "fontWeight": "Light",
      },
    },
    "h2": Object {
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 60,
        "fontWeight": "Light",
      },
    },
    "h3": Object {
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 48,
        "fontWeight": "Light",
      },
    },
  },
}
`;

exports[`convertTokensObjectToResolved preserves all references when requested 1`] = `
Object {
  "colors": Object {
    "blue": Object {
      "type": "color",
      "value": "#0000ff",
    },
    "opaqueRed": Object {
      "description": "Should NOT be resolved",
      "type": "color",
      "value": "rgba(255, 0, 0, {opacity.medium})",
    },
    "primary": Object {
      "description": "Should NOT be resolved",
      "type": "color",
      "value": "$colors.red",
    },
    "red": Object {
      "type": "color",
      "value": "#ff0000",
    },
  },
  "opacity": Object {
    "medium": Object {
      "type": "opacity",
      "value": 0.5,
    },
  },
  "radii": Object {
    "full": Object {
      "type": "borderRadius",
      "value": "100%",
    },
    "leaf": Object {
      "description": "Should NOT be resolved",
      "type": "borderRadius",
      "value": "{radii.full} 0%",
    },
  },
  "sizing": Object {
    "base": Object {
      "type": "sizing",
      "value": 2,
    },
    "large": Object {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "$sizing.medium * $sizing.scale",
    },
    "medium": Object {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "{sizing.small} * {sizing.scale}",
    },
    "responsive25": Object {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "calc(25vw * $sizing.small)",
    },
    "responsive50": Object {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "calc(50vw - {sizing.large}px)",
    },
    "scale": Object {
      "type": "sizing",
      "value": 1.5,
    },
    "small": Object {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "{sizing.base}",
    },
    "xsmall": Object {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "1 * {sizing.base}",
    },
  },
  "text": Object {
    "fontWeight": Object {
      "base": Object {
        "type": "fontWeight",
        "value": 100,
      },
      "light": Object {
        "type": "fontWeight",
        "value": "Light",
      },
    },
    "size": Object {
      "base": Object {
        "type": "fontSize",
        "value": 16,
      },
      "default": Object {
        "description": "Should NOT be resolved",
        "type": "fontSize",
        "value": "{text.size.base}{text.size.unit}",
      },
      "h1": Object {
        "type": "fontSize",
        "value": 96,
      },
      "unit": Object {
        "type": "fontSize",
        "value": "px",
      },
    },
  },
  "typography": Object {
    "h1": Object {
      "description": "Should NOT be resolved",
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": "{text.size.h1}",
        "fontWeight": "{text.fontWeight.light}",
      },
    },
    "h2": Object {
      "description": "Should NOT be resolved",
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": "3.75 * {text.size.base}",
        "fontWeight": "7 * {text.fontWeight.base}",
      },
    },
    "h3": Object {
      "description": "Should NOT be resolved",
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": "3 * {text.size.base}",
        "fontWeight": "5 * 100",
      },
    },
  },
}
`;

exports[`convertTokensObjectToResolved preserves rawValue when requested 1`] = `
Object {
  "colors": Object {
    "background": Object {
      "rawValue": "$colors.black",
      "type": "color",
      "value": "#000000",
    },
    "black": Object {
      "rawValue": "#000000",
      "type": "color",
      "value": "#000000",
    },
    "white": Object {
      "rawValue": "#ffffff",
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;

exports[`convertTokensObjectToResolved resolves all references when requested 1`] = `
Object {
  "colors": Object {
    "blue": Object {
      "type": "color",
      "value": "#0000ff",
    },
    "opaqueRed": Object {
      "description": "Should be resolved",
      "type": "color",
      "value": "#ff000080",
    },
    "primary": Object {
      "description": "Should be resolved",
      "type": "color",
      "value": "#ff0000",
    },
    "red": Object {
      "type": "color",
      "value": "#ff0000",
    },
  },
  "opacity": Object {
    "medium": Object {
      "type": "opacity",
      "value": 0.5,
    },
  },
  "radii": Object {
    "full": Object {
      "type": "borderRadius",
      "value": "100%",
    },
    "leaf": Object {
      "description": "Should be resolved",
      "type": "borderRadius",
      "value": "100% 0%",
    },
  },
  "sizing": Object {
    "base": Object {
      "type": "sizing",
      "value": 2,
    },
    "large": Object {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 4.5,
    },
    "medium": Object {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 3,
    },
    "responsive25": Object {
      "description": "Should be resolved",
      "type": "sizing",
      "value": "calc(25vw * 2)",
    },
    "responsive50": Object {
      "description": "Should be resolved",
      "type": "sizing",
      "value": "calc(50vw - 4.5px)",
    },
    "scale": Object {
      "type": "sizing",
      "value": 1.5,
    },
    "small": Object {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 2,
    },
    "xsmall": Object {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 2,
    },
  },
  "text": Object {
    "fontWeight": Object {
      "base": Object {
        "type": "fontWeight",
        "value": 100,
      },
      "light": Object {
        "type": "fontWeight",
        "value": "Light",
      },
    },
    "size": Object {
      "base": Object {
        "type": "fontSize",
        "value": 16,
      },
      "default": Object {
        "description": "Should be resolved",
        "type": "fontSize",
        "value": "16px",
      },
      "h1": Object {
        "type": "fontSize",
        "value": 96,
      },
      "unit": Object {
        "type": "fontSize",
        "value": "px",
      },
    },
  },
  "typography": Object {
    "h1": Object {
      "description": "Should be resolved",
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 96,
        "fontWeight": "Light",
      },
    },
    "h2": Object {
      "description": "Should be resolved",
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 60,
        "fontWeight": 700,
      },
    },
    "h3": Object {
      "description": "Should be resolved",
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 48,
        "fontWeight": 500,
      },
    },
  },
}
`;

exports[`convertTokensObjectToResolved resolves only math expressions when requested 1`] = `
Object {
  "colors": Object {
    "blue": Object {
      "type": "color",
      "value": "#0000ff",
    },
    "opaqueRed": Object {
      "description": "Should NOT be resolved",
      "type": "color",
      "value": "rgba(255, 0, 0, {opacity.medium})",
    },
    "primary": Object {
      "description": "Should NOT be resolved",
      "type": "color",
      "value": "$colors.red",
    },
    "red": Object {
      "type": "color",
      "value": "#ff0000",
    },
  },
  "opacity": Object {
    "medium": Object {
      "type": "opacity",
      "value": 0.5,
    },
  },
  "radii": Object {
    "full": Object {
      "type": "borderRadius",
      "value": "100%",
    },
    "leaf": Object {
      "description": "Should NOT be resolved",
      "type": "borderRadius",
      "value": "{radii.full} 0%",
    },
  },
  "sizing": Object {
    "base": Object {
      "type": "sizing",
      "value": 2,
    },
    "large": Object {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 4.5,
    },
    "medium": Object {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 3,
    },
    "responsive25": Object {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "calc(25vw * $sizing.small)",
    },
    "responsive50": Object {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "calc(50vw - {sizing.large}px)",
    },
    "scale": Object {
      "type": "sizing",
      "value": 1.5,
    },
    "small": Object {
      "description": "Should NOT be resolved",
      "type": "sizing",
      "value": "{sizing.base}",
    },
    "xsmall": Object {
      "description": "Should be resolved",
      "type": "sizing",
      "value": 2,
    },
  },
  "text": Object {
    "fontWeight": Object {
      "base": Object {
        "type": "fontWeight",
        "value": 100,
      },
      "light": Object {
        "type": "fontWeight",
        "value": "Light",
      },
    },
    "size": Object {
      "base": Object {
        "type": "fontSize",
        "value": 16,
      },
      "default": Object {
        "description": "Should NOT be resolved",
        "type": "fontSize",
        "value": "{text.size.base}{text.size.unit}",
      },
      "h1": Object {
        "type": "fontSize",
        "value": 96,
      },
      "unit": Object {
        "type": "fontSize",
        "value": "px",
      },
    },
  },
  "typography": Object {
    "h1": Object {
      "description": "Should NOT be resolved",
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": "{text.size.base}",
        "fontWeight": "{text.fontWeight.light}",
      },
    },
    "h2": Object {
      "description": "Should be resolved",
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 60,
        "fontWeight": 700,
      },
    },
    "h3": Object {
      "description": "Should be resolved",
      "type": "typography",
      "value": Object {
        "fontFamily": "Roboto",
        "fontSize": 48,
        "fontWeight": 500,
      },
    },
  },
}
`;

exports[`convertTokensObjectToResolved respects used sets 1`] = `
Object {
  "colors": Object {
    "background": Object {
      "type": "color",
      "value": "#ffffff",
    },
    "black": Object {
      "type": "color",
      "value": "#000000",
    },
    "white": Object {
      "type": "color",
      "value": "#ffffff",
    },
  },
}
`;

exports[`convertTokensObjectToResolved should expand composition when needed 1`] = `
Object {
  "composition": Object {
    "body": Object {
      "sizing": Object {
        "type": "dimension",
        "value": 12,
      },
      "spacing": Object {
        "type": "spacing",
        "value": 24,
      },
    },
    "heading": Object {
      "opacity": Object {
        "type": "opacity",
        "value": "50%",
      },
    },
  },
  "opacity": Object {
    "50": Object {
      "rawValue": "50%",
      "type": "opacity",
      "value": "50%",
    },
  },
  "size": Object {
    "12": Object {
      "rawValue": "12",
      "type": "sizing",
      "value": 12,
    },
  },
  "space": Object {
    "24": Object {
      "rawValue": "24",
      "type": "spacing",
      "value": 24,
    },
  },
}
`;
